erDiagram
    %% 簡化版 ERD — 依簡報規劃第2頁「核心表關聯」，MVP 範圍（已排除空表 job_matching / match_score）
    %% 設計邏輯：USER 鏈 | 公司/職缺/技能鏈

    USER ||--|| USER_PROFILE : "1:1"
    USER ||--o{ CAREER_SURVEY : "問卷"
    USER ||--o{ RESUME : "履歷"

    COMPANY_INFO ||--o{ JOB_POSTING : "職缺"
    JOB_POSTING ||--o{ JOB_SKILL_REQUIREMENT : "技能需求"
    SKILL_MASTER ||--o{ JOB_SKILL_REQUIREMENT : "技能主檔"

    USER {
        int user_id PK
        string email
        datetime created_at
    }

    USER_PROFILE {
        int profile_id PK
        int user_id FK
        string full_name
        string current_position
        string avatar_url
    }

    CAREER_SURVEY {
        int survey_id PK
        int user_id FK
        jsonb career_preference
        jsonb skill_self_assessment
        datetime completed_at
    }

    RESUME {
        int resume_id PK
        int user_id FK
        string resume_name
        uuid vector_id "Qdrant"
        boolean is_embedded
    }

    COMPANY_INFO {
        int company_id PK
        string company_name
        string industry
        string location
    }

    JOB_POSTING {
        int job_id PK
        int company_id FK
        string job_title
        int salary_min
        int salary_max
        uuid vector_id "Qdrant"
        boolean is_embedded
    }

    SKILL_MASTER {
        int skill_id PK
        string skill_name UK
        string skill_category
    }

    JOB_SKILL_REQUIREMENT {
        int requirement_id PK
        int job_id FK
        int skill_id FK
        string importance
    }

    %% 向量相關表：RESUME、JOB_POSTING（含 vector_id、is_embedded），截圖後可在 PPT 手動標色
    %% 後續 MVP 可考慮補上：APPLICATION_RECORD（投遞記錄）、COURSE（課程推薦）、CAREER_ANALYSIS_REPORT（職能報告）
